[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/backgrounds/screen_shading.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/hangar/Hangar_Background.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/seleccion/select_borde.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hangar/Hangar_Overlay.png" type="Texture" id=4]
[ext_resource path="res://game/ui/menus/MenuTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/ui/hud/icons/player_blue.png" type="Texture" id=6]
[ext_resource path="res://game/ui/menus/Hangar.gd" type="Script" id=7]
[ext_resource path="res://assets/ui/hud/icons/player_yellow.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/hud/icons/player_red.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_0.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_1.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_3.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_4.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_5.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_2.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/ethnocentric rg.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/ui/hangar/hangar_border.png" type="Texture" id=17]
[ext_resource path="res://game/ui/buttons/MenuButton.tscn" type="PackedScene" id=18]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 6
pause = true
fps = 6.0
frame_0/texture = ExtResource( 10 )
frame_0/delay_sec = 1.0
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 1.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 1.0
frame_3/texture = ExtResource( 12 )
frame_3/delay_sec = 1.0
frame_4/texture = ExtResource( 13 )
frame_4/delay_sec = 1.0
frame_5/texture = ExtResource( 14 )
frame_5/delay_sec = 1.0

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 6
pause = true
fps = 6.0
frame_0/texture = ExtResource( 10 )
frame_0/delay_sec = 1.0
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 1.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 1.0
frame_3/texture = ExtResource( 12 )
frame_3/delay_sec = 1.0
frame_4/texture = ExtResource( 13 )
frame_4/delay_sec = 1.0
frame_5/texture = ExtResource( 14 )
frame_5/delay_sec = 1.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 16 )

[node name="Hangar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ 959.331 ]
}
interceptor_texture = ExtResource( 8 )
bomber_texture = ExtResource( 9 )
stealth_texture = ExtResource( 6 )

[node name="Fondo" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marco" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 761.713
margin_top = 63.0
margin_right = 1154.71
margin_bottom = 265.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 431.335
margin_top = 266.587
margin_right = 681.335
margin_bottom = 388.587
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
visible = false
margin_left = 1214.0
margin_top = 352.0
margin_right = 1516.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shading" type="TextureRect" parent="."]
margin_left = 5.82519
margin_top = -4.23785
margin_right = 1925.83
margin_bottom = 1075.77
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderContainer" type="TextureRect" parent="."]
margin_left = 787.456
margin_top = 559.167
margin_right = 1138.46
margin_bottom = 910.167
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BorderContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipSprite" type="Sprite" parent="BorderContainer/MarginContainer"]
position = Vector2( 173.225, 173.225 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 8 )

[node name="Prev" type="Button" parent="."]
margin_left = 645.956
margin_top = 690.972
margin_right = 681.956
margin_bottom = 725.972
rect_scale = Vector2( 3.16909, 3.16909 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 1168.99
margin_top = 690.972
margin_right = 1204.99
margin_bottom = 725.972
rect_scale = Vector2( 3.16909, 3.16909 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrapBorder" type="TextureRect" parent="."]
margin_left = 720.0
margin_top = 63.0
margin_right = 1946.0
margin_bottom = 929.0
rect_scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 17 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrapContainer" type="VBoxContainer" parent="."]
margin_left = 796.556
margin_top = 95.0
margin_right = 1124.56
margin_bottom = 309.0
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrapContainer"]
margin_right = 328.0
margin_bottom = 141.0
text = "Total
Scrap"
align = 1

[node name="ScrapTotal" type="Label" parent="ScrapContainer"]
margin_top = 145.0
margin_right = 328.0
margin_bottom = 214.0
size_flags_vertical = 5
text = "0"
align = 1

[node name="DamageBorder" type="TextureRect" parent="."]
anchor_left = 0.114
anchor_top = 0.312
anchor_right = 0.114
anchor_bottom = 0.312
margin_left = -14.178
margin_top = 3.04001
margin_right = 1211.82
margin_bottom = 869.04
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DmgLabel" type="Label" parent="DamageBorder"]
margin_left = 238.811
margin_top = 178.081
margin_right = 479.811
margin_bottom = 251.081
rect_scale = Vector2( 3, 3 )
text = "Damage"
align = 1
valign = 1

[node name="DmgBuy" type="Button" parent="DamageBorder"]
unique_name_in_owner = true
margin_left = 306.872
margin_top = 593.965
margin_right = 501.872
margin_bottom = 625.965
rect_scale = Vector2( 3, 3 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DmgLevel" type="TextureRect" parent="DamageBorder"]
unique_name_in_owner = true
margin_left = 232.992
margin_top = 377.809
margin_right = 480.992
margin_bottom = 425.809
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
texture = SubResource( 1 )
stretch_mode = 5

[node name="CadenceBorder" type="TextureRect" parent="."]
margin_left = 1220.0
margin_top = 340.0
margin_right = 2446.0
margin_bottom = 1206.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RateLabel" type="Label" parent="CadenceBorder"]
margin_left = 71.3184
margin_top = 196.153
margin_right = 430.318
margin_bottom = 265.153
rect_scale = Vector2( 3, 3 )
text = "Shoot rate"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RateLevel" type="TextureRect" parent="CadenceBorder"]
unique_name_in_owner = true
margin_left = 257.031
margin_top = 383.875
margin_right = 504.029
margin_bottom = 431.875
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
texture = SubResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RateBuy" type="Button" parent="CadenceBorder"]
unique_name_in_owner = true
margin_left = 344.692
margin_top = 591.979
margin_right = 539.692
margin_bottom = 623.979
rect_scale = Vector2( 3, 3 )
text = "Buy"

[node name="CostLabel" type="Label" parent="."]
margin_left = 815.049
margin_top = 380.008
margin_right = 1102.05
margin_bottom = 449.008
custom_fonts/font = SubResource( 3 )
text = "Scrap
Needed"
align = 1

[node name="OnBuyMsg" type="Label" parent="."]
margin_left = 801.842
margin_top = 490.141
margin_right = 1116.84
margin_bottom = 583.141
custom_fonts/font = SubResource( 3 )
text = "Not enough
scrap!!!!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnBuyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Button" parent="." instance=ExtResource( 18 )]
margin_left = 718.064
margin_top = 926.535
margin_right = 1118.06
margin_bottom = 1026.53
text = "Continue      "
go_to_scene = "res://game/ui/menus/ShipOrderSelection.tscn"

[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="mouse_entered" from="DamageBorder/DmgBuy" to="." method="_on_DmgBuy_mouse_entered"]
[connection signal="mouse_exited" from="DamageBorder/DmgBuy" to="." method="_on_DmgBuy_mouse_exited"]
[connection signal="pressed" from="DamageBorder/DmgBuy" to="." method="_on_DmgBuy_pressed"]
[connection signal="mouse_entered" from="CadenceBorder/RateBuy" to="." method="_on_RateBuy_mouse_entered"]
[connection signal="mouse_exited" from="CadenceBorder/RateBuy" to="." method="_on_RateBuy_mouse_exited"]
[connection signal="pressed" from="CadenceBorder/RateBuy" to="." method="_on_RateBuy_pressed"]
[connection signal="timeout" from="OnBuyTimer" to="." method="_on_OnBuyTimer_timeout"]
